@@ -74,6 +74,8 @@ TDialogData* NewDialogData(lua_State* L, struct PluginStartupInfo *Info, HANDLE 
                            BOOL isOwned);
 int GetFarColor(lua_State *L, int pos, struct FarColor* Color);
 void PushFarColor(lua_State *L, const struct FarColor* Color);
+HANDLE OptHandle(lua_State *L);
+void FillPluginPanelItem(lua_State *L, struct PluginPanelItem *pi, int CollectorPos);
 
 typedef struct
 {
