@@ -1,3 +1,7 @@
+shmuel 2024-04-03 19:49:33+03:00 - build 818
+
+1. LuaFAR: refactoring.
+
 shmuel 2024-04-03 00:03:52+03:00 - build 817
 
 1. LuaFAR: DM_SETDLGDATA returns the previous value (was: returns nothing).
